--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 
         <meta charset="UTF-8">
         <title>Rock, Paper, Scissors</title>
-        <!--<script type="text/javascript" src="./index.js" defer></script>-->
+        <script type="text/javascript" src="./index.js" defer></script>
         <link rel="stylesheet" href="style.css">
     </head>
     <body>
@@ -23,9 +23,9 @@
                 <button id=playButton>Attack</button>
                 <h2>Choose Your Weapon</h2>
                 <div id="weaponSelect">
-                    <img id="rWeapon" value="ROCK" class="weapon" src="./img/rockUser.png">
-                    <img id="pWeapon" value="PAPER" class="weapon" src="./img/paperUser.png">
-                    <img id="sWeapon" value="SCISSORS" class="weapon" src="./img/scissorsUser.png">
+                    <img id="ROCK" class="weapon" src="./img/rockUser.png">
+                    <img id="PAPER" class="weapon" src="./img/paperUser.png">
+                    <img id="SCISSORS" class="weapon" src="./img/scissorsUser.png">
                 </div>
             </div>
             <div id="playBoard">
