Add more features to gameplay
Created decreasing health bars

Added user and npc hands to battlefield when attack
is clicked

Created a switch to determine which menu hands to
reset to initial attributes

Created a switch to handle the graphics of a
'draw' result

Resolved issue where decrementation of score was
not firing(needed to use pre-decrementation)

Problems:
    -No way of resetting scores(game keeps playing)

--- a/index.html
+++ b/index.html
@@ -32,16 +32,15 @@
                 <h2>Battleground</h2>
                 <div id="battleZone">
                     <div id="playerDisplay"></div>
-                    <div id="divider"></div>
                     <div id="computerDisplay"></div>
                 </div>
                 <div id="result">
-                    <div id="playerHealth">
-                        <img src="./img/redPill.png">
+                    <div>
+                        <img id="playerHealth" src="./img/redPill.png">
                     </div>
                     <div id="winLose"></div>
-                    <div id="computerHealth">
-                        <img src="./img/bluePill.png">
+                    <div>
+                        <img id="npcHealth" src="./img/bluePill.png">
                     </div>
                 </div>
             </div>
