--- a/index.html
+++ b/index.html
@@ -1,11 +1,12 @@
 <!DOCTYPE html>
 <html lang="en">
     <head>
+        <!--GET font "Audiowide"-->
          <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Audiowide&family=Roboto:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
 
-
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <meta charset="UTF-8">
         <title>Rock, Paper, Scissors</title>
         <script type="text/javascript" src="./index.js" defer></script>
@@ -19,7 +20,6 @@
         </div>
         <div id="interface">
             <div id="menu">
-                <h2>Menu</h2>
                 <button id=playButton>Attack</button>
                 <h2>Choose Your Weapon</h2>
                 <div id="weaponSelect">
@@ -29,10 +29,10 @@
                 </div>
             </div>
             <div id="playBoard">
-                <h2>Battleground</h2>
+                <h2>Battlefield</h2>
                 <div id="battleZone">
                     <div id="playerDisplay"></div>
-                    
+    
                     <div id="computerDisplay"></div>
                 </div>
                 <div id="result">
