Adjust some commenting to reflect final project

--- a/index.html
+++ b/index.html
@@ -8,11 +8,13 @@
 
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <meta charset="UTF-8">
+        
         <title>Rock, Paper, Scissors</title>
         <script type="text/javascript" src="./index.js" defer></script>
         <link rel="stylesheet" href="style.css">
     </head>
     <body>
+        <audio id="audio" autoplay="true" hidden="true" src="sound/Deified - The Grey Room _ Density & Time.mp3" type="audio/mp3"></audio>
         <div id="header">
             <h1 id="headTextOne">Rock</h1>
             <h1 id="headTextTwo">Paper</h1>
